@@ -22,7 +22,6 @@
  * Boston, MA  02110-1301  USA
  */
 package org.hibernate.dialect;
-import javax.persistence.criteria.CriteriaBuilder;
 import java.lang.reflect.InvocationHandler;
 import java.lang.reflect.Method;
 import java.lang.reflect.Proxy;
@@ -33,7 +32,6 @@ import java.sql.SQLException;
 /**
  * @author Steve Ebersole
  */
-@SuppressWarnings( {"UnnecessaryBoxing"})
 public class Mocks {
 
 	public static Connection createConnection(String databaseName, int majorVersion) {
@@ -136,7 +134,7 @@ public class Mocks {
 			}
 
 			if ( "hashCode".equals( methodName ) ) {
-				return new Integer( this.hashCode() );
+				return Integer.valueOf( this.hashCode() );
 			}
 
 			if ( canThrowSQLException( method ) ) {
